Made font scaling update on active tab immediately.

--- a/html/options.html
+++ b/html/options.html
@@ -37,15 +37,16 @@
         <option value="turkish">T&uuml;rk&ccedil;e (Turkish)</option>
         <option value="ukrainian">&#x0423;&#x043a;&#x0440;&#x0430;&#x0457;&#x043d;&#x0441;&#x044c;&#x043a;&#x0430; (Ukrainian)</option>
       </select>
+      <span><sup>(requires page refresh)</sup></span>
       <h4>Update Heropedia</h4>
       <select id="UpdatePeriod">
         <option value="1440">Every Minute</option>
         <option value="24" selected="selected">Every Hour</option>
         <option value="1">Day</option>
       </select>
-      <h4>Size</h4>
-      <input class="ScalingFactor" type="range" min="6" max="30" step="2" value="18"></input>
-      <input class="ScalingFactor" type="number" value="18"></input><span class="textInputUnits">px</span>
+      <h4>Font Size</h4>
+      <input class="BaseFontSize" type="range" min="6" max="24" step="1" value="11"></input>
+      <input class="BaseFontSize" type="number" value="11"></input><span class="textInputUnits">px</span>
       <p>Questions? Feedback? Want to help? Visit the <a target="_blank" href="https://github.com/dgkf/DotaTooltips">Project's GitHub</a></p>
     </div>
   </body>
