--- a/html/tooltips/hero.html
+++ b/html/tooltips/hero.html
@@ -10,32 +10,32 @@
   </div>
   <div class="heroStats">
     <div class="StatVal">
-      <img title="Intelligence" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_int.png">
-      <img linked-id="overviewIcon_Primary_[[pa]]" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_primary.png" class="overviewIcon_Primary_int">
+      <img class="Attr" contenteditable=""title="Intelligence" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_int.png">
+      <img contenteditable=""linked-id="overviewIcon_Primary_[[pa]]" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_primary.png" class="Attr overviewIcon_Primary_int">
       <span class="StatText" linked-text="[[attribs.int.b]] + [[attribs.int.g]]"></span>
     </div>
     <div class="StatVal">
-      <img title="Intelligence" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_str.png">
-      <img linked-id="overviewIcon_Primary_[[pa]]" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_primary.png" class="overviewIcon_Primary_str">
+      <img class="Attr" contenteditable=""title="Intelligence" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_str.png">
+      <img contenteditable=""linked-id="overviewIcon_Primary_[[pa]]" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_primary.png" class="Attr overviewIcon_Primary_str">
       <span class="StatText" linked-text="[[attribs.str.b]] + [[attribs.str.g]]"></span>
     </div>
     <div class="StatVal">
-      <img title="Intelligence" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_agi.png">
-      <img linked-id="overviewIcon_Primary_[[pa]]" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_primary.png" class="overviewIcon_Primary_agi">
+      <img class="Attr" title="Intelligence" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_agi.png">
+      <img linked-id="overviewIcon_Primary_[[pa]]" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_primary.png" class="Attr overviewIcon_Primary_agi">
       <span class="StatText" linked-text="[[attribs.agi.b]] + [[attribs.agi.g]]"></span>
     </div>
   </div>
   <div class="heroStats">
     <div class="StatVal">
-      <img class="StatAttr" title="Damage" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_attack_2.png">
+      <img class="BaseStat" title="Damage" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_attack_2.png">
       <span class="StatText" linked-text="[[attribs.dmg.min]] - [[attribs.dmg.max]]"></span>
     </div>
     <div class="StatVal">
-      <img class="StatAttr" title="Movespeed" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_speed_2.png">
+      <img class="BaseStat" title="Movespeed" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_speed_2.png">
       <span class="StatText" linked-text="[[attribs.ms]]"></span>
     </div>
     <div class="StatVal">
-      <img class="StatAttr" title="Defense" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_defense_2.png">
+      <img class="BaseStat" title="Defense" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_defense_2.png">
       <span class="StatText" linked-text="[[attribs.armor]]"></span>
     </div>
   </div>
