Added some additional functionality for case sensitivity of keywords and a sensitivity of each keywords association to Dota. (so that keywords like 'cheese' aren't picked up on non-Dota website

--- a/html/options.html
+++ b/html/options.html
@@ -38,11 +38,12 @@
         <option value="ukrainian">&#x0423;&#x043a;&#x0440;&#x0430;&#x0457;&#x043d;&#x0441;&#x044c;&#x043a;&#x0430; (Ukrainian)</option>
       </select>
       <span><sup>(requires page refresh)</sup></span>
-      <h4>Update Heropedia</h4>
+      <h4>Update Heropedia Every...</h4>
       <select id="UpdatePeriod">
-        <option value="1440">Every Minute</option>
-        <option value="24" selected="selected">Every Hour</option>
-        <option value="1">Day</option>
+        <option value="1440">Minute</option>
+        <option value="24">Hour</option>
+        <option value="1" selected="selected">Day</option>
+        <option value="0.0333">Month</option>
       </select>
       <h4>Font Size</h4>
       <input class="BaseFontSize" type="range" min="6" max="24" step="1" value="11"></input>
