fixed keyword sensitivity.

--- a/html/options.html
+++ b/html/options.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <div class="DotaTooltipOptions">
-      <span><h1>Dota Tooltips</h1></span>
+      <span><h1>Dota Tooltips</h1></span><br/>
       <p>Dota keyword tooltips on every page!</p><br/>
-      <h4>Language</h4>
+      <h4>Language</h4><br/>
       <select id="Language">
         <option value="english" selected="selected">English</option>
         <option value="brazilian">Portugu&ecirc;s-Brasil (Portuguese-Brazil)</option>
@@ -50,7 +50,7 @@
         <input class="BaseFontSize" type="range" min="6" max="24" step="1" value="11"></input>
         <input class="BaseFontSize" type="number" value="11"></input><span class="textInputUnits">px</span>
       </div>
-      <h4>Keyword Specificity </h4><span class="KeywordSpecificityInfo"></span>
+      <h4>Context Filter</h4><span class="KeywordSpecificityInfo"></span>
       <input class="KeywordSpecificity" type="range" min="-2" max="2" step="1" value="0"></input>
       <p>Questions? Feedback? Want to help? Visit the <a target="_blank" href="https://github.com/dgkf/DotaTooltips">Project's GitHub</a></p>
       <div class="DevMode"><input type="checkbox" id="DevMode"></div>
