finished porting for use in firefox. lots of little tweaks needed, but it now runs nearly identically on both chrome and firefox.

--- a/dev/html/options.html
+++ b/dev/html/options.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="/css/options.css"/>
-    <script type="text/javascript" src="/ext/js/jquery-3.1.0.min.js"></script>
+    <script type="text/javascript" src="/third_party_resources/js/jquery-3.1.0.min.js"></script>
     <script type="text/javascript" src="/js/options.js"></script>
   </head>
   <body>
