--- a/dev/html/tooltips/ability.html
+++ b/dev/html/tooltips/ability.html
@@ -1,15 +1,17 @@
-<div class="abilityIcon">
-  <img src="" width="56" height="56" linked-src="http://cdn.dota2.com/apps/dota2/images/abilities/[[objname]]_hp2.png">
+<div class="DotaTooltip DotaFont DotaTooltip_ability">
+  <div class="abilityIcon">
+    <img src="" width="56" height="56" linked-src="http://cdn.dota2.com/apps/dota2/images/abilities/[[objname]]_hp2.png"/>
+  </div>
+  <br />
+  <div class="abilityName" linked-text="[[dname]]"></div>
+  <br clear="left" />
+  <div class="abilityHR1"></div>
+  <div class="abilityTarget" linked-text="[[affects]]"></div>
+  <div class="abilityHR2"></div>
+  <div class="abilityDesc" linked-text="[[desc]]"></div>
+  <div class="abilityNotes" linked-text="[[notes]]"></div>
+  <div class="abilityDmg" linked-text="[[dmg]]"></div>
+  <div class="abilityAttrib" linked-text="[[attrib]]"></div>
+  <div class="abilityCMB" linked-text="[[cmb]]"></div>
+  <div class="lore" linked-text="[[lore]]"></div>
 </div>
-<br />
-<div class="abilityName" linked-text="[[dname]]"></div>
-<br clear="left">
-<div class="abilityHR1"></div>
-<div class="abilityTarget" linked-text="[[affects]]"></div>
-<div class="abilityHR2"></div>
-<div class="abilityDesc" linked-text="[[desc]]"></div>
-<div class="abilityNotes" linked-text="[[notes]]"></div>
-<div class="abilityDmg" linked-text="[[dmg]]"></div>
-<div class="abilityAttrib" linked-text="[[attrib]]"></div>
-<div class="abilityCMB" linked-text="[[cmb]]"></div>
-<div class="lore" linked-text="[[lore]]"></div>
