--- a/dev/html/tooltips/item.html
+++ b/dev/html/tooltips/item.html
@@ -1,17 +1,19 @@
-<div class="itemIcon">
-  <img src="" width="74" height="56" border="0" linked-src="http://cdn.dota2.com/apps/dota2/images/items/[[img]]">
+<div class="DotaTooltip DotaFont DotaTooltip_item">
+  <div class="itemIcon">
+    <img src="" width="74" height="56" border="0" linked-src="http://cdn.dota2.com/apps/dota2/images/items/[[img]]"/>
+  </div>
+  <div class="itemName"><div linked-text="[[dname]]" linked-class="quality_[[qual]]"></div></div>
+  <div class="goldIcon">
+    <img src="http://cdn.dota2.com/apps/dota2/images/tooltips/gold.png" width="25" height="17" border="0"/>
+  </div>
+  <div class="goldCost" linked-text="[[cost]]"></div>
+  <br clear="left"/>
+  <div class="description" linked-text="[[desc]]"></div>
+  <div class="attribs" linked-text="[[attrib]]"></div>
+  <div class="cooldownMana">
+    <img alt="Cooldown" title="Cooldown" class="cooldownImg" src="http://cdn.dota2.com/apps/dota2/images/tooltips/cooldown.png" width="22" height="22" border="0"/>
+    <span linked-text="[[cd]]"></span>
+    <br clear="left"/><br clear="left"/>
+  </div>
+  <div class="lore" linked-text="[[lore]]"></div>
 </div>
-<div class="itemName"><div linked-text="[[dname]]" linked-class="quality_[[qual]]"></div></div>
-<div class="goldIcon">
-  <img src="http://cdn.dota2.com/apps/dota2/images/tooltips/gold.png" width="25" height="17" border="0">
-</div>
-<div class="goldCost" linked-text="[[cost]]"></div>
-<br clear="left">
-<div class="description" linked-text="[[desc]]"></div>
-<div class="attribs" linked-text="[[attrib]]"></div>
-<div class="cooldownMana">
-  <img alt="Cooldown" title="Cooldown" class="cooldownImg" src="http://cdn.dota2.com/apps/dota2/images/tooltips/cooldown.png" width="22" height="22" border="0">
-  <span linked-text="[[cd]]"></span>
-  <br clear="left"><br clear="left">
-</div>
-<div class="lore" linked-text="[[lore]]"></div>
