Solved mixed content issues by finding Valve's secure cdn server for fetching images.

--- a/dev/html/tooltips/ability.html
+++ b/dev/html/tooltips/ability.html
@@ -1,6 +1,6 @@
 <div class="DotaTooltip DotaFont DotaTooltip_ability">
   <div class="abilityIcon">
-    <img src="" width="56" height="56" linked-src="http://cdn.dota2.com/apps/dota2/images/abilities/[[objname]]_hp2.png"/>
+    <img src="" width="56" height="56" linked-src="https://cdn.steamstatic.com/apps/dota2/images/abilities/[[objname]]_hp2.png"/>
   </div>
   <br />
   <div class="abilityName" linked-text="[[dname]]"></div>
