--- a/dev/html/tooltips/hero.html
+++ b/dev/html/tooltips/hero.html
@@ -6,37 +6,37 @@
   </div>
   <div class="heroPortraitStats">
     <div class="heroPrimaryPortraitHolder">
-      <img class="heroPrimaryPortraitImg" linked-src="http://cdn.dota2.com/apps/dota2/images/heroes/[[objname]]_vert.jpg" src=""/>
-      <img class="heroPrimaryPortraitOverlay" src="http://cdn.dota2.com/apps/dota2/images/heropedia/heroprimaryportrait_overlay.png"/>
+      <img class="heroPrimaryPortraitImg" linked-src="https://cdn.steamstatic.com/apps/dota2/images/heroes/[[objname]]_vert.jpg" src=""/>
+      <img class="heroPrimaryPortraitOverlay" src="https://cdn.steamstatic.com/apps/dota2/images/heropedia/heroprimaryportrait_overlay.png"/>
     </div>
     <div class="heroStats">
       <div class="StatVal">
-        <img class="Attr" contenteditable="" title="Intelligence" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_int.png"/>
-        <img contenteditable="" linked-id="overviewIcon_Primary_[[pa]]" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_primary.png" class="Attr overviewIcon_Primary_int"/>
+        <img class="Attr" contenteditable="" title="Intelligence" src="https://cdn.steamstatic.com/apps/dota2/images/heropedia/overviewicon_int.png"/>
+        <img contenteditable="" linked-id="overviewIcon_Primary_[[pa]]" src="https://cdn.steamstatic.com/apps/dota2/images/heropedia/overviewicon_primary.png" class="Attr overviewIcon_Primary_int"/>
         <span class="StatText" linked-text="[[attribs.int.b]]+[[attribs.int.g]]"></span>
       </div>
       <div class="StatVal">
-        <img class="Attr" contenteditable="" title="Intelligence" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_str.png"/>
-        <img contenteditable="" linked-id="overviewIcon_Primary_[[pa]]" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_primary.png" class="Attr overviewIcon_Primary_str"/>
+        <img class="Attr" contenteditable="" title="Intelligence" src="https://cdn.steamstatic.com/apps/dota2/images/heropedia/overviewicon_str.png"/>
+        <img contenteditable="" linked-id="overviewIcon_Primary_[[pa]]" src="https://cdn.steamstatic.com/apps/dota2/images/heropedia/overviewicon_primary.png" class="Attr overviewIcon_Primary_str"/>
         <span class="StatText" linked-text="[[attribs.str.b]]+[[attribs.str.g]]"></span>
       </div>
       <div class="StatVal">
-        <img class="Attr" title="Intelligence" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_agi.png"/>
-        <img linked-id="overviewIcon_Primary_[[pa]]" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_primary.png" class="Attr overviewIcon_Primary_agi"/>
+        <img class="Attr" title="Intelligence" src="https://cdn.steamstatic.com/apps/dota2/images/heropedia/overviewicon_agi.png"/>
+        <img linked-id="overviewIcon_Primary_[[pa]]" src="https://cdn.steamstatic.com/apps/dota2/images/heropedia/overviewicon_primary.png" class="Attr overviewIcon_Primary_agi"/>
         <span class="StatText" linked-text="[[attribs.agi.b]]+[[attribs.agi.g]]"></span>
       </div>
     </div>
     <div class="heroStats">
       <div class="StatVal">
-        <img class="BaseStat" title="Damage" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_attack_2.png"/>
+        <img class="BaseStat" title="Damage" src="https://cdn.steamstatic.com/apps/dota2/images/heropedia/overviewicon_attack_2.png"/>
         <span class="StatText" linked-text="[[attribs.dmg.min]]-[[attribs.dmg.max]]"></span>
       </div>
       <div class="StatVal">
-        <img class="BaseStat" title="Movespeed" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_speed_2.png"/>
+        <img class="BaseStat" title="Movespeed" src="https://cdn.steamstatic.com/apps/dota2/images/heropedia/overviewicon_speed_2.png"/>
         <span class="StatText" linked-text="[[attribs.ms]]"></span>
       </div>
       <div class="StatVal">
-        <img class="BaseStat" title="Defense" src="http://cdn.dota2.com/apps/dota2/images/heropedia/overviewicon_defense_2.png"/>
+        <img class="BaseStat" title="Defense" src="https://cdn.steamstatic.com/apps/dota2/images/heropedia/overviewicon_defense_2.png"/>
         <span class="StatText" linked-text="[[attribs.armor]]"></span>
       </div>
     </div>
